--- a/public/choose.css
+++ b/public/choose.css
@@ -10,17 +10,18 @@
 }
  html, body {
 	 height: 100%;
+
 }
  body {
 	 display: grid;
 	 place-items: center;
 }
  .page-content {
-	 display: grid;
-	 grid-gap: 1rem;
-	 padding: 1rem;
-	 max-width: 14024px;
-	 margin: 0 auto;
+	 display: flex;
+	 flex-direction: column;
+	 gap:42px;
+	 padding: 20px;
+
 	 font-family: var(--font-sans);
 }
  @media (min-width: 600px) {
@@ -39,12 +40,13 @@
 	 align-items: flex-end;
 	 overflow: hidden;
 	 padding: 1rem;
-	 width: 100%;
+	 width: 90vw;
 	 text-align: center;
 	 color: whitesmoke;
 	 background-color: whitesmoke;
+	 height: 100vh !important;
 	 box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1), 0 4px 4px rgba(0, 0, 0, 0.1), 0 8px 8px rgba(0, 0, 0, 0.1), 0 16px 16px rgba(0, 0, 0, 0.1);
-}
+	}
  @media (min-width: 600px) {
 	 .card {
 		 height: 350px;
@@ -56,7 +58,7 @@
 	 top: 0;
 	 left: 0;
 	 width: 100%;
-	 height: 110%;
+	 height: 100vh;
 	 background-size: cover;
 	 background-position: 0 0;
 	 transition: transform calc(var(--d) * 1.5) var(--e);
@@ -69,17 +71,17 @@
 	 top: 0;
 	 left: 0;
 	 width: 100%;
-	 height: 200%;
+	height: 210vh;;
 	 pointer-events: none;
 	 background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.009) 11.7%, rgba(0, 0, 0, 0.034) 22.1%, rgba(0, 0, 0, 0.072) 31.2%, rgba(0, 0, 0, 0.123) 39.4%, rgba(0, 0, 0, 0.182) 46.6%, rgba(0, 0, 0, 0.249) 53.1%, rgba(0, 0, 0, 0.320) 58.9%, rgba(0, 0, 0, 0.394) 64.3%, rgba(0, 0, 0, 0.468) 69.3%, rgba(0, 0, 0, 0.540) 74.1%, rgba(0, 0, 0, 0.607) 78.8%, rgba(0, 0, 0, 0.668) 83.6%, rgba(0, 0, 0, 0.721) 88.7%, rgba(0, 0, 0, 0.762) 94.1%, rgba(0, 0, 0, 0.790) 100%);
 	 transform: translateY(-50%);
 	 transition: transform calc(var(--d) * 2) var(--e);
 }
  .card:nth-child(1):before {
-	 background-image: url(./assets/templateImage/);
+	 background-image: url();
 }
  .card:nth-child(2):before {
-	 background-image: url(https://images.unsplash.com/photo-1533903345306-15d1c30952de?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
+	 background-image: url(./assets/image1.png);
 }
  .card:nth-child(3):before {
 	 background-image: url(https://images.unsplash.com/photo-1545243424-0ce743321e11?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
