--- a/public/index.css
+++ b/public/index.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700&display=swap');
 
+
+
+
 * {
     margin: 0px;
     padding: 0px;
@@ -349,4 +352,11 @@ main section.section-1 footer .user-content .user-details h4 a {
         flex-direction: column;
         row-gap: 25px;
     }
+}
+button{
+    transition: all 0.5s;
+}
+
+button:hover{
+    background-color:#1ede3e !important;
 }
